added ajax post method for adding a theme

--- a/src/Cms/CoreBundle/Resources/config/routing.yml
+++ b/src/Cms/CoreBundle/Resources/config/routing.yml
@@ -40,7 +40,7 @@ cms_core.site_settings:
 cms_core.site_add_theme:
   pattern: site/add-theme
   defaults: { _controller: CmsCoreBundle:Site:addTheme }
-#  methods: [POST]
+  methods: [POST]
 
 cms_core.site_read:
   pattern: /site/{id}
