--- a/src/Cms/CoreBundle/Resources/config/routing.yml
+++ b/src/Cms/CoreBundle/Resources/config/routing.yml
@@ -114,6 +114,16 @@ cms_core.content_manager_wizard_formats_save:
   defaults: { _controller: CmsCoreBundle:ContentManager:saveFormats }
   methods: [POST]
 
+cms_core.content_manager_wizard_loop:
+  pattern: /contentManager/wizard/loop/{siteId}/{contentTypeId}
+  defaults: { _controller: CmsCoreBundle:ContentManager:loop }
+  methods: [GET]
+
+cms_core.content_manager_wizard_loop_save:
+  pattern: /contentManager/wizard/loop/{siteId}/{contentTypeId}
+  defaults: { _controller: CmsCoreBundle:ContentManager:saveLoop }
+  methods: [POST]
+
 #node
 cms_core.node_delete:
   pattern: /node/delete
