--- a/src/Cms/CoreBundle/Resources/config/routing.yml
+++ b/src/Cms/CoreBundle/Resources/config/routing.yml
@@ -47,6 +47,11 @@ cms_core.site_select_theme:
   defaults: { _controller: CmsCoreBundle:Site:selectTheme }
   methods: [POST]
 
+cms_core.site_new:
+  pattern: /site/new
+  defaults: { _controller: CmsCoreBundle:Site:new}
+  methods: [GET]
+
 cms_core.site_read:
   pattern: /site/{id}
   defaults: { _controller: CmsCoreBundle:Site:read }
@@ -56,6 +61,16 @@ cms_core.site_delete:
   pattern: /site/delete
   defaults: { _controller: CmsCoreBundle:Site:delete }
   methods: [POST]
+
+cms_core.site_unique_namespace:
+  pattern: /site/unique/namespace/{namespace}
+  defaults: { _controller: CmsCoreBundle:Site:uniqueNamespace }
+  methods: [GET]
+
+cms_core.site_unique_domain:
+  pattern: /site/unique/domain/{domain}
+  defaults: { _controller: CmsCoreBundle:Site:uniqueDomain }
+  methods: [GET]
 
 #contentType
 cms_core.contentType_save:
