--- a/src/Cms/CoreBundle/Resources/config/routing.yml
+++ b/src/Cms/CoreBundle/Resources/config/routing.yml
@@ -396,21 +396,56 @@ cms_core.session_notices:
   requirements:
     _format: json
 
+#api
+cms_core.api_test:
+  pattern: /api/test
+  defaults: { _controller: CmsCoreBundle:Client:apiTest }
+  methods: [GET]
+
+cms_core.api_read_locale_nodes:
+  pattern: /api/{_locale}/{path}
+  defaults: { _controller: CmsCoreBundle:Client:apiNodeRead }
+  methods: [GET]
+  requirements:
+    _locale: "[a-z]{2}-[a-z]{2}"
+    path: ".+"
+
+cms_core.api_v1_read_node:
+  pattern: /api/v1/node/{path}
+  defaults:  { _controller: CmsCoreBundle:Client:apiNodeRead }
+  methods: [GET]
+  requirements:
+    path: ".+"
+
+cms_core.api_v1_read_loop:
+  pattern: /api/v1/loop/{path}
+  defaults:  { _controller: CmsCoreBundle:Client:apiLoopRead }
+  methods: [GET]
+  requirements:
+    path: ".+"
+
+cms_core.api_read_nodes_null_path:
+  pattern: /api/v1/
+  defaults: { _controller: CmsCoreBundle:Client:apiNodeRead }
+  methods: [GET]
 
 #client routes
 cms_core.read_locale_nodes:
   pattern: /{_locale}/{path}
-  defaults: { _controller: CmsCoreBundle:Default:nodeRead }
+  defaults: { _controller: CmsCoreBundle:Client:nodeRead }
+  methods: [GET]
   requirements:
     _locale: "[a-z]{2}-[a-z]{2}"
     path: ".+"
 
 cms_core.read_nodes:
   pattern: /{path}
-  defaults:  { _controller: CmsCoreBundle:Default:nodeRead }
+  defaults:  { _controller: CmsCoreBundle:Client:nodeRead }
+  methods: [GET]
   requirements:
     path: ".+"
 
 cms_core.read_nodes_null_path:
   pattern: /
-  defaults: { _controller: CmsCoreBundle:Default:nodeRead }
+  defaults: { _controller: CmsCoreBundle:Client:nodeRead }
+  methods: [GET]
