--- a/src/Cms/CoreBundle/Resources/config/routing.yml
+++ b/src/Cms/CoreBundle/Resources/config/routing.yml
@@ -20,6 +20,11 @@ _welcome:
   defaults: { _controller: CmsCoreBundle:Welcome:index }
   methods: [GET]
 
+welcome.about:
+  pattern: /about
+  defaults: { _controller: CmsCoreBundle:Welcome:about }
+  methods: [GET]
+
 #app
 cms_core.app_index:
   pattern: /app
