tried patching / issue for pipestack vs clients

--- a/app/config/config_dev.yml
+++ b/app/config/config_dev.yml
@@ -25,7 +25,8 @@ monolog:
 assetic:
     use_controller: true
 
-    
+parameters:
+      domain: localhost
 
 #swiftmailer:
 #    delivery_address: me@example.com
