--- a/src/Cms/CoreBundle/Resources/config/routing.yml
+++ b/src/Cms/CoreBundle/Resources/config/routing.yml
@@ -17,6 +17,7 @@ cms_core.user_save:
 #landing
 _welcome:
   pattern: /
+  host: "{domain}"
   defaults: { _controller: CmsCoreBundle:Welcome:index }
   methods: [GET]
   requirements:
