changed domain param for prod

--- a/src/Cms/CoreBundle/Resources/config/routing.yml
+++ b/src/Cms/CoreBundle/Resources/config/routing.yml
@@ -21,7 +21,7 @@ _welcome:
   defaults: { _controller: CmsCoreBundle:Welcome:index }
   methods: [GET]
   requirements:
-    domain: %domain%
+    domain: "%domain%"
 
 welcome.about:
   pattern: /about
