--- a/app/config/config_dev.yml
+++ b/app/config/config_dev.yml
@@ -27,6 +27,7 @@ assetic:
 
 parameters:
       domain: "localhost"
+      domainRegex: "%domain%"
 
 #swiftmailer:
 #    delivery_address: me@example.com
