--- a/app/config/config_prod.yml
+++ b/app/config/config_prod.yml
@@ -38,4 +38,5 @@ assetic:
 
 
 parameters:
-      domain: "dev.pipestack.com"
+      domain: "pipestack.com"
+      domainRegex: "www.%domain%|dev.%domain%|%domain%"
