--- a/app/config/config_prod.yml
+++ b/app/config/config_prod.yml
@@ -39,4 +39,5 @@ assetic:
 
 parameters:
       domain: "pipestack.com"
-      domainRegex: "www.%domain%|dev.%domain%|%domain%"
+#      domainRegex: "www.%domain%|dev.%domain%|%domain%"
+      domainRegex: "dev.%domain%"
