changed domain param for prod

--- a/app/config/config_prod.yml
+++ b/app/config/config_prod.yml
@@ -39,5 +39,6 @@ assetic:
 
 parameters:
       domain: "pipestack.com"
+      subdomains: "www|dev"
 #      domainRegex: "www.%domain%|dev.%domain%|%domain%"
-      domainRegex: "www|dev.%domain%"
+      domainRegex: "%subdomains%.%domain%"
