--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,16 +1,17 @@
 cms_user:
     resource: "@CmsUserBundle/Resources/config/routing.yml"
     prefix:   /
-
-cms_validator:
-    resource: "@CmsValidatorBundle/Resources/config/routing.yml"
-    prefix:   /
-
-cms_persister:
-    resource: "@CmsPersisterBundle/Resources/config/routing.yml"
-    prefix:   /
+    host: '%domain%'
 
 cms_core:
     resource: "@CmsCoreBundle/Resources/config/routing.yml"
     prefix:   /
+    host: '%domain%'
 
+cms_client:
+    resource: "@CmsCoreBundle/Resources/config/routing_client.yml"
+    prefix:   /
+
+cms_api_v1:
+    resource: "@CmsCoreBundle/Resources/config/routing_api.yml"
+    prefix:   /api/v1/
