--- a/src/Cms/CoreBundle/Resources/config/routing_api.yml
+++ b/src/Cms/CoreBundle/Resources/config/routing_api.yml
@@ -1,31 +1,36 @@
-cms_core.api_read_locale_nodes:
-  pattern: /{_locale}/{path}
-  defaults: { _controller: CmsCoreBundle:Client:apiNodeRead }
-  methods: [GET]
-  requirements:
-    _locale: "[a-z]{2}-[a-z]{2}"
-    path: ".+"
-
-cms_core.api_v1_read_node:
-  pattern: /node/{path}
-  defaults:  { _controller: CmsCoreBundle:Client:apiNodeRead }
-  methods: [GET]
-  requirements:
-    path: ".+"
-
-cms_core.api_v1_read_loop:
-  pattern: /loop/{path}
-  defaults:  { _controller: CmsCoreBundle:Client:apiLoopRead }
-  methods: [GET]
-  requirements:
-    path: ".+"
-
-cms_core.api_read_nodes_null_path:
-  pattern: /
-  defaults: { _controller: CmsCoreBundle:Client:apiNodeRead }
+cms_api_v1.node_read:
+  pattern: /node/{id}
+  defaults: { _controller: CmsCoreBundle:Api:nodeReadV1 }
   methods: [GET]
 
-cms_core.api_v1_save_node:
-  pattern: /node
-  defaults: { _controller: CmsCoreBundle:Node:apiSave }
-  methods: [GET, POST]
+#cms_core.api_read_locale_nodes:
+#  pattern: /{_locale}/{path}
+#  defaults: { _controller: CmsCoreBundle:Client:apiNodeRead }
+#  methods: [GET]
+#  requirements:
+#    _locale: "[a-z]{2}-[a-z]{2}"
+#    path: ".+"
+#
+#cms_core.api_v1_read_node:
+#  pattern: /node/{path}
+#  defaults:  { _controller: CmsCoreBundle:Client:apiNodeRead }
+#  methods: [GET]
+#  requirements:
+#    path: ".+"
+#
+#cms_core.api_v1_read_loop:
+#  pattern: /loop/{path}
+#  defaults:  { _controller: CmsCoreBundle:Client:apiLoopRead }
+#  methods: [GET]
+#  requirements:
+#    path: ".+"
+#
+#cms_core.api_read_nodes_null_path:
+#  pattern: /
+#  defaults: { _controller: CmsCoreBundle:Client:apiNodeRead }
+#  methods: [GET]
+#
+#cms_core.api_v1_save_node:
+#  pattern: /node
+#  defaults: { _controller: CmsCoreBundle:Node:apiSave }
+#  methods: [GET, POST]
