--- a/src/Cms/CoreBundle/Resources/config/routing_api.yml
+++ b/src/Cms/CoreBundle/Resources/config/routing_api.yml
@@ -1,3 +1,8 @@
+cms_api_v1.node_find:
+  pattern: /node/find
+  defaults: { _controller: CmsCoreBundle:Api:nodeFindV1 }
+  methods: [GET]
+
 cms_api_v1.node_read:
   pattern: /node/{id}
   defaults: { _controller: CmsCoreBundle:Api:nodeReadV1 }
