--- a/src/Cms/CoreBundle/Resources/config/routing_api.yml
+++ b/src/Cms/CoreBundle/Resources/config/routing_api.yml
@@ -1,21 +1,26 @@
 cms_api_v1.node_find:
-  pattern: /node/find
-  defaults: { _controller: CmsCoreBundle:Api:nodeFindV1 }
+  pattern: /nodes/find
+  defaults: { _controller: CmsCoreBundle:Api:nodeFindV1, _format: 'json' }
   methods: [GET]
 
 cms_api_v1.node_search:
-  pattern: /node/search
-  defaults: { _controller: CmsCoreBundle:Api:nodeSearchV1 }
+  pattern: /nodes/search
+  defaults: { _controller: CmsCoreBundle:Api:nodeSearchV1, _format: 'json' }
   methods: [GET]
 
 cms_api_v1.node_read:
-  pattern: /node/{id}
-  defaults: { _controller: CmsCoreBundle:Api:nodeReadV1 }
+  pattern: /nodes/{id}
+  defaults: { _controller: CmsCoreBundle:Api:nodeReadV1, _format: 'json' }
   methods: [GET]
 
 cms_api_v1.loop_find:
-  pattern: /loop/find
-  defaults: { _controller: CmsCoreBundle:Api:loopFindV1 }
+  pattern: /loops/find
+  defaults: { _controller: CmsCoreBundle:Api:loopFindV1, _format: 'json' }
+  methods: [GET]
+
+cms_api_v1.test:
+  pattern: /test
+  defaults: { _controller: CmsCoreBundle:Api:test }
   methods: [GET]
 
 #cms_core.api_read_locale_nodes:
