added stopwatch bundle to vendors and composer.json. Added stopwatch data for loadTime into meta object on ai responses

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -28,7 +28,7 @@ security:
               domain:   ~ # Defaults to the current domain from $_SERVER
 
         admin_area:
-            pattern:    ^/admin$
+            pattern:    ~
             form_login:
             logout: ~
 
