--- a/src/Cms/CoreBundle/Resources/config/services.yml
+++ b/src/Cms/CoreBundle/Resources/config/services.yml
@@ -19,6 +19,8 @@ parameters:
     cms.api_access_token.class: Cms\CoreBundle\Services\Api\Token
     cms.check_route.class: Cms\CoreBundle\Services\CheckRoute
     cms.api_node_adopter.class: Cms\CoreBundle\Services\Api\EntityAdopters\NodeAdopter
+    cms.api_site_adopter.class: Cms\CoreBundle\Services\Api\EntityAdopters\SiteAdopter
+    cms.api_contentType_adopter.class: Cms\CoreBundle\Services\Api\EntityAdopters\ContentTypeAdopter
     cms.api_output.class: Cms\CoreBundle\Services\Api\Output
     cms.api_base.class: Cms\CoreBundle\Services\Api\Base
 
@@ -72,6 +74,10 @@ services:
         class: %cms.api_access_token.class%
     api_node_adopter:
         class: %cms.api_node_adopter.class%
+    api_site_adopter:
+        class: %cms.api_site_adopter.class%
+    api_contentType_adopter:
+        class: %cms.api_contentType_adopter.class%
     api_output:
         class: %cms.api_output.class%
     api_base:
